Changed status endpoints
