# src/controllers/status/status.controller.ts
@@ -1,0 +1,36 @@
+import { Request, Response } from 'express';
+import { crowdSecAPI } from '../../services/crowdsec-api.service';
+import { databaseService } from '../../services/database.service';
+import packageJson from '../../../package.json';
+
+export const getStatus = async (req: Request, res: Response) => {
+  const lapiStatus = await (async() => {
+    try {
+      const isConnected = await crowdSecAPI.checkStatus();
+      const lastSync = databaseService.getLastSuccessfulSync();
+      return {
+        lapiConnected: isConnected,
+        lastSuccessfulSync: lastSync ? lastSync.toISOString() : null,
+        timestamp: new Date().toISOString(),
+      }
+    } catch (error) {
+      return {
+        lapiConnected: false,
+        lastSuccessfulSync: null,
+        timestamp: new Date().toISOString(),
+      }
+    }
+  })();
+
+  try {
+    res.json({
+      csLapi: lapiStatus,
+      csMonitorApi: {
+        version: packageJson.version,
+        newVersionAvailable: null, // TODO: implement
+      }
+    });
+  } catch (error) {
+    res.status(500).send();
+  }
+};
